# migration-acceleration-framework

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: datastage.py  health.py  logs.py  migration.py  tools.py
backend/app/api/ws/: progress.py
backend/app/core/: config.py  database.py  logging.py  oracle_client.py  s3_client.py  snowflake_client.py
backend/app/models/: logs.py  schemas.py
backend/app/services/datastage/: xml_analyzer.py  xml_parser.py
backend/app/services/migration/: partitioned.py  state.py
backend/app/services/validation/: comparator.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py
backend/tests/unit/: test_services.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.module.css  page.tsx
frontend/src/app/dblink/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/gaps/: page.tsx
frontend/src/app/lineage/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/migration/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/app/validation/: page.tsx
frontend/src/components/layout/: Sidebar.module.css  Sidebar.tsx  TopBar.module.css  TopBar.tsx
frontend/src/components/ui/: index.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/lib/: api.ts  useJobProgress.ts
frontend/src/styles/: globals.css
